CJAL-29/01/2019-Se Finaliza desarro de modulos Catalogo Parque Vehicular y Cat Combustible

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
@@ -78,8 +78,8 @@
                                 <div class="col-sm-12">
                                     <div class="row clearfix">
                                         <div class="col-sm-3">
-                                            <b>Teléfono del cliente:</b>
-                                            @Html.TextBoxFor(m => m.Telefono1, new { @class = "form-control", placeholder = "Teléfono del cliente" })
+                                            <b>Número de Pedido:</b>
+                                            @Html.TextBoxFor(m => m.IdPedido, new { @class = "form-control", placeholder = "Número de Pedido" })
                                         </div>
                                         <div class="col-sm-3">
                                             <b>Teléfono del cliente:</b>
