--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
@@ -38,6 +38,11 @@
     @using (Html.BeginForm("Alta", "EquipoTransporte", FormMethod.Post))
     {
         @Html.HiddenFor(m => m.IdEmpresa)
+        @Html.HiddenFor(m => m.IdEquipoTransporte)
+        @Html.HiddenFor(m => m.Id_DetalleEtransporte)
+        @Html.HiddenFor(m => m.IdVehiculoUtilitario)
+        @Html.HiddenFor(m => m.IdCamioneta)
+        @Html.HiddenFor(m => m.IdPipa)
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
@@ -270,27 +275,25 @@
                                 <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="form-group">
                                         @Html.DevExpress().ComboBox(settings =>
-                                    {
-                                        settings.Name = "IdTipoUnidad";
-                                        settings.Width = 180;
-                                        settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                        settings.Theme = "Material";
-                                        settings.Properties.TextField = "TipoCombustible";
-                                        settings.Properties.ValueField = "IdTipoUnidad";
-                                        //settings.ClientEnabled = true;
-                                        //settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeFilter";
-                                        settings.PreRender = (s, e) =>
-                                        {
-                                            MVCxComboBox combo = s as MVCxComboBox;
-                                            combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
-                                            combo.Properties.Items.Insert(1, new ListEditItem("Camioneta"));
-                                            combo.Properties.Items.Insert(2, new ListEditItem("Pipa"));
-                                            combo.Properties.Items.Insert(3, new ListEditItem("Utilitario"));
-                                            combo.Properties.ValueType = typeof(int);
-                                            combo.SelectedIndex = Model.IdTipoUnidad;
-                                        };
-                                    }).Bind(Model.IdTipoUnidad).GetHtml()
+                                   {
+                                       settings.Name = "IdTipoUnidad";
+                                       settings.Width = 180;
+                                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                       settings.Theme = "Material";
+                                       settings.Properties.TextField = "TipoUnidad";
+                                       settings.Properties.ValueField = "IdTipoUnidad";
+                                       settings.PreRender = (s, e) =>
+                                       {
+                                           MVCxComboBox combo = s as MVCxComboBox;
+                                           combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
+                                           //combo.Properties.Items.Insert(1, new ListEditItem("Camioneta"));
+                                           //combo.Properties.Items.Insert(2, new ListEditItem("Pipa"));
+                                           //combo.Properties.Items.Insert(3, new ListEditItem("Utilitario"));
+                                           combo.Properties.ValueType = typeof(int);
+                                           combo.SelectedIndex = Model.IdTipoUnidad;
+                                       };
+                                   }).BindList(ViewBag.TipoUnidad).GetHtml()
                                         @Html.ValidationMessageFor(m => m.IdTipoUnidad, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>  <div class="col-lg-1 col-md-1 col-sm-1">
@@ -321,8 +324,8 @@
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="form-group">
-                                        @Html.TextBoxFor(m => m.AliasUnidad, new { @class = "form-control", @placeholder = "Alias de Unidad" })
-                                        @Html.ValidationMessageFor(m => m.AliasUnidad, "", new { @class = "alert-danger" })
+                                        @Html.TextBoxFor(m => m.Descripcion, new { @class = "form-control", @placeholder = "Alias de Unidad" })
+                                        @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                             </div>
@@ -337,7 +340,7 @@
                                         }
                                         else
                                         {
-                                            <button btn formaction="EditarClienteLoc" class="btn btn-primary btn-round float-right">
+                                            <button btn formaction=@Url.Action("GuardarEditar") formmethod="post" class="btn btn-primary btn-round float-right">
                                                 <i class="zmdi zmdi-swap"></i> Actualizar
                                             </button>
                                         }
