JSA-Finalizacion Nuevos modulos
Modulos terminados:
Mantenimiento vehicular
Recarga de combustible
asignación vehicular

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC.Presentacion.Models.Transporte.AsignacionModel
+﻿@model MVC.Presentacion.Models.AsignacionModel
 @using PagedList.Mvc;
 @using PagedList;
 @Html.DevExpress().GetStyleSheets(
@@ -159,5 +159,3 @@
         }
     </div>
 </section>
-
-
